--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,16 @@
 {
   "presets": [
-    "env",
+    "stage-1",
+    "stage-2",
     "react",
-    "stage-2"
+    [
+      "latest",
+      {
+        "es2015": {
+          "modules": false
+        }
+      }
+    ]
   ],
   "plugins": [
     "transform-class-properties"
